# opensrc-website

./: .dockerignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: deployment.yml  update-requirements-file.yml
static/css/: style.css
static/js/: script.js
static/legacy/: customScrollBar.css  parallax.css
templates/: base.html  certificate.html  dashboard.html  hall_of_cyscom.html  leaderboard.html  legacy.html  locker.html
