[tool.poetry]
name = "cyscomvit-web"
version = "1.3"
description = "CYSCOM VIT's open source website, for the leaderboard"
authors = ["CYSCOM VIT <cyscom@vit.ac.in>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.6"
flask = "^3.0.0"
firebase-admin = "^6.2.0"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
